--- a/css/main.css
+++ b/css/main.css
@@ -261,3 +261,11 @@ list-style-type: none;
 #search-textbox {
     background-color: #fff;
 }
+/*#steps {
+    height:500px;
+    height:700px;
+}
+#userNavAge, #userNavProgram, #userNavCourse, #streetViewContent, #carousel-example-generic  {
+    height:450px;
+    height:650px;
+}*/
